--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,31 @@
 body {
-    background-color: lightgreen;
-  }
-  #navbar{
-  position:fixed;
-  }
+  margin: 0;
+}
+#navbar {
+  overflow: hidden;
+  background-color: rgb(63, 32, 112);
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+#welcome-section {
+  text-align: center;
+}
+#main_body {
+  color: #080808;
+  padding: 14px 16px;
+  text-align: center;
+}
+#main_body a {
+  color: rgb(72, 6, 179);
+  padding: 14px 16px;
+  text-decoration: none;
+}
   @media only screen and (max-height: 100%) {
     body {
       background-color: lightblue;
